 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES

PIG-5282: Upgade to Java 8 (satishsaley via rohini)
 
IMPROVEMENTS

PIG-5317: Upgrade old dependencies: commons-lang, hsqldb, commons-logging (nkollar via rohini)

PIG-5322: ConstantCalculator optimizer is not applied for split (rohini)

PIG-5316: Initialize mapred.task.id property for PoS jobs (nkollar via szita)

PIG-5302: Remove HttpClient dependency (nkollar via szita)

PIG-5305: Enable yarn-client mode execution of tests in Spark (1) mode (szita)

PIG-4120: Broadcast the index file in case of POMergeCoGroup and POMergeJoin (satishsaley via rohini)

PIG-5306: REGEX_EXTRACT() logs every line that doesn't match (satishsaley via rohini)

PIG-5298: Verify if org.mortbay.jetty is removable (nkollar via szita)

PIG-5268: Review of org.apache.pig.backend.hadoop.datastorage.HDataStorage (belugabehr via daijy)

PIG-5288: Improve performance of PigTextRawBytesComparator (rohini)

PIG-5287: bump jython to 2.7.1 (dbist13 via rohini)

PIG-5264: Remove deprecated keys from PigConfiguration (nkollar via rohini)

PIG-5157: Upgrade to Spark 2.0 (nkollar via liyunzhang)

PIG-5237: Fix DOT file parsing to enable DOT-based physical plan testing (YaShock via szita)

PIG-5269: MapReduceLauncher and MRJobStats imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (nkollar via szita)

PIG-4700: Enable progress reporting for Tasks in Tez (satishsaley via rohini)

PIG-5251: Bump joda-time to 2.9.9 (dbist13 via rohini)
 
OPTIMIZATIONS
 
BUG FIXES
PIG-5333: LoadCaster sometimes not set for complex type (knoguchi)

PIG-5328: expressionOperator Divide.equalsZero(DataType.BIGDECIMAL) is invalid (michaelthoward via knoguchi)
